--- a/scss/global.scss
+++ b/scss/global.scss
@@ -75,6 +75,7 @@ form {
     background-color: #f4f4f4;
     border: none;
     border-radius: 20px;
+    overflow: hidden;
 
     &:focus {
         background-color: #f4f4f4;
